@@ -1,3 +1,8 @@
+2015-10-16  rob.spoor  <bbbm@icemanx.nl>
+
+	Fixed some memory leaks
+	Added confirmation before deleting commands
+
 2015-10-15  rob.spoor  <bbbm@icemanx.nl>
 
 	Added support for older gtk+-2.0 versions
